--- a/tpmlwebref_review.htm
+++ b/tpmlwebref_review.htm
@@ -93,7 +93,7 @@
                         </a>
                         <ul>
                             <li><a href="tpmlwebref_questionsearch.htm"><span>(服務)讀者問題回覆管理</span></a></li>
-                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版信件管理</span></a></li>
+                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版回覆管理</span></a></li>
                             <li><a href="tpmlwebref_referrals.htm"><span>(服務)轉介信箱管理</span></a></li>
                             <li><a href="tpmlwebref_review.htm"><span>(服務)問題審核管理</span></a></li>
                             <li><a href="tpmlwebref_chat_customer.htm"><span>(服務)客服管理</span></a></li>
@@ -151,7 +151,7 @@
                                                     <select id="" name="">
                                                         <option value="" selected="" disabled="disabled">
                                                         </option>
-                                                        <option value="1" selected>送陳時間</option>
+                                                        <option value="1" selected>待處理時間</option>
                                                         <option value="2">審核時間</option>
                                                         <option value="3" selected>修改時間</option>
                                                         <option value="4">退文時間</option>
@@ -194,7 +194,6 @@
                     <!-- flex-12 -->
                     <div class="flex-12">
                         <div class="col ">
-
                             <!-- 中央區塊 -->
                             <div class="content_block">
                                 <div class="_head">
@@ -205,10 +204,9 @@
                                         審核階段：
                                         <ul>
                                             <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">送陳</a></li>
-                                            <li><a href="#">簽核</a></li>
-                                            <li><a href="#">修改</a></li>
+                                            <li><a href="#">待處理</a></li>
                                             <li><a href="#">退文</a></li>
+                                            <li><a href="#">簽核通過</a></li>
                                         </ul>
                                     </div>
                                     <!-- 頁碼 -->
@@ -272,7 +270,7 @@
                                                     </td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="blue">送陳</span></td>
+                                                    <td><span class="blue">待處理</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -288,7 +286,7 @@
                                                     </td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="green">簽核</span></td>
+                                                    <td><span class="green">簽核通過</span></td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -304,7 +302,7 @@
                                                     </td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="blue">送陳</span></td>
+                                                    <td><span class="blue">待處理</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -320,7 +318,7 @@
                                                     </td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="gray">修改</span></td>
+                                                    <td><span class="blue">待處理</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -337,7 +335,7 @@
 
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="gray">修改</span></td>
+                                                    <td><span class="blue">待處理</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -353,7 +351,7 @@
                                                     </td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="gray">修改</span></td>
+                                                    <td><span class="blue">待處理</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -369,7 +367,7 @@
                                                     </td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="gray">修改</span></td>
+                                                    <td><span class="blue">待處理</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -386,7 +384,7 @@
 
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="gray">修改</span></td>
+                                                    <td><span class="blue">待處理</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -402,7 +400,7 @@
                                                     </td>
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>陳長官</td>
-                                                    <td><span class="gray">修改</span></td>
+                                                    <td><span class="blue">待處理</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
