--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -94,7 +94,7 @@
                         </a>
                         <ul>
                             <li><a href="tpmlwebref_questionsearch.htm"><span>(服務)讀者問題回覆管理</span></a></li>
-                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版信件管理</span></a></li>
+                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版回覆管理</span></a></li>
                             <li><a href="tpmlwebref_referrals.htm"><span>(服務)轉介信箱管理</span></a></li>
                             <li><a href="tpmlwebref_review.htm"><span>(服務)問題審核管理</span></a></li>
                             <li><a href="tpmlwebref_chat_customer.htm"><span>(服務)客服管理</span></a></li>
@@ -292,7 +292,7 @@
                                     </div>
                                     <div class="flex-form">
                                         <div class="form_grp">
-                                            <div class="form_title">狀態<abbr>*</abbr></div>簽核
+                                            <div class="form_title">狀態<abbr>*</abbr></div>處理中
                                             <div class="form_content">
                                             </div>
                                         </div>
@@ -300,7 +300,6 @@
                                     <div class="btn_grp">
                                         <button class="btn btn-red">退文</button>
                                         <button class="btn btn-green">簽核通過</button>
-                                        <button class="btn btn-gray">修改通過</button>
                                     </div>
                                 </div>
                                 <div class="block">
