--- a/tpmlwebref_referralsedit.htm
+++ b/tpmlwebref_referralsedit.htm
@@ -94,7 +94,7 @@
                         </a>
                         <ul>
                             <li><a href="tpmlwebref_questionsearch.htm"><span>(服務)讀者問題回覆管理</span></a></li>
-                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版信件管理</span></a></li>
+                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版回覆管理</span></a></li>
                             <li><a href="tpmlwebref_referrals.htm"><span>(服務)轉介信箱管理</span></a></li>
                             <li><a href="tpmlwebref_review.htm"><span>(服務)問題審核管理</span></a></li>
                             <li><a href="tpmlwebref_chat_customer.htm"><span>(服務)客服管理</span></a></li>
@@ -156,11 +156,27 @@
                                                     </div>
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
-                                                            <input name="userName" id="userName" type="text"
-                                                                value="諮詢服務課">
-                                                            <label for="userName">單位名稱<abbr></abbr></label>
+                                                            <select id="" name="" class="dynamicCol used">
+                                                                <option value="" selected="" disabled="disabled">
+                                                                </option>
+                                                                <option value="1" selected>單位1</option>
+                                                                <option value="2">單位2</option>
+                                                                <option value="3">單位3</option>
+                                                            </select>
+                                                            <label>第一層單位</label>
                                                         </div>
-                                                        <!-- <div class="help">說明文字</div> -->
+                                                    </div>
+                                                    <div class="form_grp">
+                                                        <div class="labelEffect">
+                                                            <select id="" name="" class="dynamicCol used">
+                                                                <option value="" selected="" disabled="disabled">
+                                                                </option>
+                                                                <option value="1" selected>分館1</option>
+                                                                <option value="2">分館2</option>
+                                                                <option value="3">分館3</option>
+                                                            </select>
+                                                            <label>第二層分館</label>
+                                                        </div>
                                                     </div>
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
