--- a/tpmlwebref_referrals.htm
+++ b/tpmlwebref_referrals.htm
@@ -206,8 +206,8 @@
                                         <tbody>
                                             <tr>
                                                 <td class="num">10</td>
-                                                <td><time>諮詢服務課</time></td>
-                                                <td><time>松山區/中崙分館</time></td>
+                                                <td><time>大安區</time></td>
+                                                <td><time>中崙分館</time></td>
                                                 <td>cof@email.tpml.edu.tw,coi@email.tpml.edu.tw,coj@email.tpml.edu.tw,com@email.tpml.edu.tw,cok@email.tpml.edu.tw
                                                 </td>
                                                 <td>
@@ -219,8 +219,8 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">9</td>
-                                                <td><time>資訊室</time></td>
-                                                <td><time>中山區/大直分館</time></td>
+                                                <td><time>松山區</time></td>
+                                                <td><time>大直分館</time></td>
                                                 <td>coi@email.tpml.edu.tw</td>
                                                 <td>
                                                     <div class="btn_grp">
@@ -231,8 +231,8 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">8</td>
-                                                <td><time>秘書室</time></td>
-                                                <td><time>大安區/大安書閣</time></td>
+                                                <td><time>中山區</time></td>
+                                                <td><time>分館2</time></td>
                                                 <td>cof@email.tpml.edu.tw</td>
                                                 <td>
                                                     <div class="btn_grp">
@@ -243,8 +243,8 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">7</td>
-                                                <td><time>閱覽課</time></td>
-                                                <td><time>大安區/龍安民眾閱覽室</time></td>
+                                                <td><time>大安區</time></td>
+                                                <td><time>分館3</time></td>
                                                 <td>cof@email.tpml.edu.tw</td>
                                                 <td>
                                                     <div class="btn_grp">
@@ -255,8 +255,8 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">6</td>
-                                                <td><time>採編課</time></td>
-                                                <td><time>信義區/永春分館</time></td>
+                                                <td><time>中山區</time></td>
+                                                <td><time>分館4</time></td>
                                                 <td>cof@email.tpml.edu.tw,cog@email.tpml.edu.tw</td>
                                                 <td>
                                                     <div class="btn_grp">
@@ -267,8 +267,8 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">5</td>
-                                                <td><time>兒童室</time></td>
-                                                <td><time>松山區/松山分館</time></td>
+                                                <td><time>中山區</time></td>
+                                                <td><time>分館5</time></td>
                                                 <td>cof@email.tpml.edu.tw,coi@email.tpml.edu.tw,coj@email.tpml.edu.tw,com@email.tpml.edu.tw
                                                 </td>
                                                 <td>
@@ -280,8 +280,8 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">4</td>
-                                                <td><time>期刊室</time></td>
-                                                <td><time>信義區/六合分館</time></td>
+                                                <td><time>中山區</time></td>
+                                                <td><time>分館6</time></td>
                                                 <td>cof@email.tpml.edu.tw</td>
                                                 <td>
                                                     <div class="btn_grp">
@@ -292,7 +292,7 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">3</td>
-                                                <td><time>推廣課</time></td>
+                                                <td><time>中山區</time></td>
                                                 <td><time>松山區/松山分館</time></td>
                                                 <td>cof@email.tpml.edu.tw</td>
                                                 <td>
@@ -304,8 +304,8 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">2</td>
-                                                <td><time>視聽室</time></td>
-                                                <td><time>大安區/道藩分館</time></td>
+                                                <td><time>中山區</time></td>
+                                                <td><time>分館7</time></td>
                                                 <td>cof@email.tpml.edu.tw</td>
                                                 <td>
                                                     <div class="btn_grp">
@@ -316,8 +316,8 @@
                                             </tr>
                                             <tr>
                                                 <td class="num">1</td>
-                                                <td><time>推廣課</time></td>
-                                                <td><time>信義區/新興分館</time></td>
+                                                <td><time>中山區</time></td>
+                                                <td><time>分館8</time></td>
                                                 <td>cof@email.tpml.edu.tw,cog@email.tpml.edu.tw</td>
                                                 <td>
                                                     <div class="btn_grp">
