--- a/tpmlwebref_referralsedit.htm
+++ b/tpmlwebref_referralsedit.htm
@@ -159,11 +159,11 @@
                                                             <select id="" name="" class="dynamicCol used">
                                                                 <option value="" selected="" disabled="disabled">
                                                                 </option>
-                                                                <option value="1" selected>單位1</option>
-                                                                <option value="2">單位2</option>
-                                                                <option value="3">單位3</option>
+                                                                <option value="1" selected>區域1</option>
+                                                                <option value="2">區域2</option>
+                                                                <option value="3">區域3</option>
                                                             </select>
-                                                            <label>第一層單位</label>
+                                                            <label>第一層</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp">
