--- a/tpmlwebref_referrals.htm
+++ b/tpmlwebref_referrals.htm
@@ -139,7 +139,7 @@
                                                     <select id="" name="">
                                                         <option value="" selected="" disabled="disabled">
                                                         </option>
-                                                        <option value="1" selected>第一層單位</option>
+                                                        <option value="1" selected>第一層</option>
                                                         <option value="2">第二層分館</option>
                                                     </select>
                                                 </div>
