--- a/tpmlwebref_referrals.htm
+++ b/tpmlwebref_referrals.htm
@@ -197,7 +197,7 @@
                                                 <th class="text-left">
                                                     <a href="#">序號<i class="i_sort"></i></a>
                                                 </th>
-                                                <th class="text-left">第一層單位</th>
+                                                <th class="text-left">第一層</th>
                                                 <th class="text-left">第二層分館</th>
                                                 <th>信箱</th>
                                                 <th>編輯</th>
