--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -586,7 +586,7 @@
                             </div>
                             <!-- 右側資料widget -->
                             <div class="publish_block">
-                                <!-- 每種不同功能，都用block區分 -->
+                               <!-- 每種不同功能，都用block區分 -->
                                 <div class="block">
                                     <div class="_head">
                                         <h3>轉介單位</h3>
@@ -596,17 +596,12 @@
                                             <div class="labelEffect">
                                                 <select id="" name="" class="used">
                                                     <option value="" selected="" disabled="disabled">請選擇</option>
-                                                    <option value="選項1">秘書室</option>
-                                                    <option value="選項2">閱覽課</option>
-                                                    <option value="選項3">兒童室</option>
-                                                    <option value="選項4">期刊室</option>
-                                                    <option value="選項5">採編課</option>
-                                                    <option value="選項6">推廣課</option>
-                                                    <option value="選項7">視聽室</option>
-                                                    <option value="選項8">各閱覽單位</option>
-                                                    <option value="選項9">其他</option>
+                                                    <option value="選項1">區域1</option>
+                                                    <option value="選項2">區域2</option>
+                                                    <option value="選項3">區域3</option>
+                                                    <option value="選項4">其他</option>
                                                 </select>
-                                                <label>轉介單位</label>
+                                                <label>轉介區域</label>
                                             </div>
                                         </div>
                                     </div>
