--- a/tpmlwebref_emailtemplateedit.htm
+++ b/tpmlwebref_emailtemplateedit.htm
@@ -127,92 +127,83 @@
                     </div>
                     <!-- flex-12 -->
                     <div class="flex-12">
-                        <div class="col ">
-                            <!-- 中央區塊 -->
-                            <div class="content_block">
-                                <div class="_head">
-                                    <h3>公版回覆編輯</h3>
-                                </div>
-                                <div class="_content">
-                                    <div class="flex-form">
-                                        <div class="form_grp form_inline">
-                                        </div>
-                                        <!--h4>基本資訊</h4-->
-                                        <div class="form_grp" style="margin-top:20px;">
-                                            <div class="form_content">
-                                                <div class="form_grp form_inline">
-                                                    <div class="labelEffect">
-                                                        <input name="" type="text" value="請輸入標題"
-                                                            class="dynamicCol used">
-                                                        <label>標題名稱</label>
-                                                    </div>
+                        <div class="content_block">
+                            <div>
+                                <div class="content__wrapper">
+                                    <div class="_head">
+                                        <h3>公版回覆編輯</h3>
+                                        <div class="flex-form">
+                                            <div class="form_grp data-title">
+                                                <div class="labelEffect">
+                                                    <input name="" type="text" value="">
+                                                    <label>請輸入資料標題<abbr>*</abbr></label>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form_grp" style="margin-bottom:50px;">
-                                            <div class="labelEffect">
-                                                <textarea class="used" style="min-height:250px;"></textarea>
-                                                <label>說明</label>
-                                            </div>
-                                            <div class="help">200 / 800</div>
+                                    </div>
+                                    <div class="_content">
+                                        <!-- 自由編輯區 -->
+                                        <div class="cp user_edit">
+                                            所見即所得內文編輯區<br>
+                                            維基百科：https://en.wikipedia.org/wiki/Printer%27s_key
                                         </div>
                                     </div>
-                                    <hr>
-                                    <div class="setting_block">
-                                        <h3>附件檔案上傳
-                                            <!--button class="btn btn-xs"><i class="i_addfile"></i>新增檔案</button-->
-                                        </h3>
-                                        <div class="fileDragDrop">
-                                            <input type="file" id="inputFile" onchange="changeHandler(event,'file')"
-                                                ondragover="dragoverHandler(event,'file')"
-                                                ondrop="dropHandler(event,'file')">
-                                            <p><em>上傳附件檔案</em></p>
-                                            <p>拖拉檔案或選擇「從本機上傳」</p>
-                                        </div>
-                                        <p class="tips">說明文案：檔案上傳限制，格式或檔案大小等</p>
+                                </div>
+                                <hr>
+                                <div class="setting_block">
+                                    <h3>附件檔案上傳
+                                        <!--button class="btn btn-xs"><i class="i_addfile"></i>新增檔案</button-->
+                                    </h3>
+                                    <div class="fileDragDrop">
+                                        <input type="file" id="inputFile" onchange="changeHandler(event,'file')"
+                                            ondragover="dragoverHandler(event,'file')"
+                                            ondrop="dropHandler(event,'file')">
+                                        <p><em>上傳附件檔案</em></p>
+                                        <p>拖拉檔案或選擇「從本機上傳」</p>
                                     </div>
+                                    <p class="tips">說明文案：檔案上傳限制，格式或檔案大小等</p>
                                 </div>
                             </div>
-                            <!-- 右側資料widget -->
-                            <!-- 右側資料widget -->
-                            <div class="publish_block">
-                                <!-- 每種不同功能，都用block區分 -->
-                                <div class="block">
-                                    <div class="_head">
-                                        <h3>啟用選項</h3>
-                                    </div>
-                                    <div class="flex-form">
-                                        <div class="form_grp">
-                                            <div class="form_title">是否啟用<abbr>*</abbr></div>
-                                            <div class="form_content">
-                                                <div class="radio_grp form_inline">
-                                                    <label><input name="radioStatus" type="radio" value=""
-                                                            checked><span>是</span></label>
-                                                    <label><input name="radioStatus" type="radio"
-                                                            value=""><span>否</span></label>
-                                                </div>
+                        </div>
+                        <!-- 右側資料widget -->
+                        <!-- 右側資料widget -->
+                        <div class="publish_block">
+                            <!-- 每種不同功能，都用block區分 -->
+                            <div class="block">
+                                <div class="_head">
+                                    <h3>啟用選項</h3>
+                                </div>
+                                <div class="flex-form">
+                                    <div class="form_grp">
+                                        <div class="form_title">是否啟用<abbr>*</abbr></div>
+                                        <div class="form_content">
+                                            <div class="radio_grp form_inline">
+                                                <label><input name="radioStatus" type="radio" value=""
+                                                        checked><span>是</span></label>
+                                                <label><input name="radioStatus" type="radio"
+                                                        value=""><span>否</span></label>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="btn_grp">
-                                        <a href="" class="btn btn-green">暫存</a>
-                                        <a href="" class="btn btn-orange">發布</a>
-                                    </div>
                                 </div>
-                                <div class="block">
-                                    <div class="_head">
-                                        <h3>最後編修資訊</h3>
-                                    </div>
-                                    <div class="log">
-                                        <ul>
-                                            <li>
-                                                <span><i class="i_man"></i></span>系統管理者(admin)
-                                            </li>
-                                            <li>
-                                                <span><i class="i_clock"></i></span>2024/11/26 14:26:10
-                                            </li>
-                                        </ul>
-                                    </div>
+                                <div class="btn_grp">
+                                    <a href="" class="btn btn-green">暫存</a>
+                                    <a href="" class="btn btn-orange">發布</a>
+                                </div>
+                            </div>
+                            <div class="block">
+                                <div class="_head">
+                                    <h3>最後編修資訊</h3>
+                                </div>
+                                <div class="log">
+                                    <ul>
+                                        <li>
+                                            <span><i class="i_man"></i></span>系統管理者(admin)
+                                        </li>
+                                        <li>
+                                            <span><i class="i_clock"></i></span>2024/11/26 14:26:10
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -220,6 +211,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <!-- JS-->
