--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -244,7 +244,7 @@
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
                                                             <textarea id="sourceText"
-                                                                style="color: rgb(128, 122, 139); cursor: pointer;">維基百科：https://en.wikipedia.org/wiki/Printer%27s_key</textarea>
+                                                                style="color: rgb(128, 122, 139); cursor: pointer;">請套所見即所得區域。維基百科：https://en.wikipedia.org/wiki/Printer%27s_key</textarea>
                                                             <label for="userId">資料來源<abbr></abbr></label>
                                                         </div>
                                                         <div class="help">輸入資料來源內容將顯示於前台(字數200/500)</div>
