--- a/tpmlwebref_emailtemplateedit.htm
+++ b/tpmlwebref_emailtemplateedit.htm
@@ -136,7 +136,7 @@
                                             <div class="form_grp data-title">
                                                 <div class="labelEffect">
                                                     <input name="" type="text" value="">
-                                                    <label>請輸入資料標題<abbr>*</abbr></label>
+                                                    <label>請輸入標題名稱<abbr>*</abbr></label>
                                                 </div>
                                             </div>
                                         </div>
